--- a/azuredevops/pipelines/azure-devops-iac.yml
+++ b/azuredevops/pipelines/azure-devops-iac.yml
@@ -1,22 +1,24 @@
 trigger:
 - main
 
-pool: 
-  vmImage:'ubuntu-latest'
+jobs:
+- job: Linux
+  pool:
+    vmImage: 'ubuntu-latest'
 
-steps:
-- bash: az --version
-  displayName: 'Show Azure CLI version'
+  steps:
+  - bash: az --version
+    displayName: 'Show Azure CLI version'
 
-- bash: echo ${AZURE_DEVOPS_CLI_PAT} | az devops login
-  env:
-    AZURE_DEVOPS_CLI_PAT: $(System.AccessToken)
-  displayName: 'Login Azure DevOps Extension'
+  - bash: echo ${AZURE_DEVOPS_CLI_PAT} | az devops login
+    env:
+      AZURE_DEVOPS_CLI_PAT: $(System.AccessToken)
+    displayName: 'Login Azure DevOps Extension'
 
-- bash: az devops configure --defaults organization=$(System.TeamFoundationCollectionUri) project=$(System.TeamProject) --use-git-aliases true
-  displayName: 'Set default Azure DevOps organization and project'
+  - bash: az devops configure --defaults organization=$(System.TeamFoundationCollectionUri) project=$(System.TeamProject) --use-git-aliases true
+    displayName: 'Set default Azure DevOps organization and project'
 
-- bash: |
-    az pipelines build list
-    git pr list
-  displayName: 'Show build list and PRs'
+  - bash: |
+      az pipelines build list
+      git pr list
+    displayName: 'Show build list and PRs'
