--- a/azuredevops/pipelines/azure-devops-iac.yml
+++ b/azuredevops/pipelines/azure-devops-iac.yml
@@ -19,6 +19,5 @@ jobs:
     displayName: 'Set default Azure DevOps organization and project'
 
   - bash: |
-      az pipelines build list
-      git pr list
-    displayName: 'Show build list and PRs'
+      az devops project create --name 'TestProject1'
+    displayName: 'Create a new project'
