Update azure-devops-iac.yml for Azure Pipelines

--- a/azuredevops/pipelines/azure-devops-iac.yml
+++ b/azuredevops/pipelines/azure-devops-iac.yml
@@ -21,8 +21,13 @@ jobs:
   - bash: az devops configure --defaults organization=$(System.TeamFoundationCollectionUri) project=$(System.TeamProject) --use-git-aliases true
     displayName: 'Set default Azure DevOps organization and project'
     
+  # - bash:
+  #     az devops project create --name 'TestProject2'
+  #   displayName: 'Create a new project'
+
   - bash:
       echo $AZURE_DEVOPS_EXT_GITHUB_PAT
+      echo "From variable:"
       echo $github-pat-token
       az pipelines variable update --name 'AZURE_DEVOPS_EXT_GITHUB_PAT' --value $github-pat-token
       echo $AZURE_DEVOPS_EXT_GITHUB_PAT
