--- a/azuredevops/pipelines/azure-devops-iac.yml
+++ b/azuredevops/pipelines/azure-devops-iac.yml
@@ -31,4 +31,5 @@ jobs:
       echo $github-pat-token
       az pipelines variable update --name 'AZURE_DEVOPS_EXT_GITHUB_PAT' --value $github-pat-token --secret true
       echo $AZURE_DEVOPS_EXT_GITHUB_PAT
+      az devops service-endpoint github create --github-url 'https://github.com/ai-factory-azure/iac-arm'--name 'Github-IAC'
     displayName: 'Create Github Service Endpoint'
