Update azure-devops-iac.yml for Azure Pipelines

--- a/azuredevops/pipelines/azure-devops-iac.yml
+++ b/azuredevops/pipelines/azure-devops-iac.yml
@@ -26,6 +26,7 @@ jobs:
   #   displayName: 'Create a new project'
 
   - bash:
+      az pipelines variable list
       echo $AZURE_DEVOPS_EXT_GITHUB_PAT
       echo "From variable:"
       echo $github-pat-token
