Update azure-devops-iac.yml for Azure Pipelines

--- a/azuredevops/pipelines/azure-devops-iac.yml
+++ b/azuredevops/pipelines/azure-devops-iac.yml
@@ -21,16 +21,17 @@ jobs:
   - bash: az devops configure --defaults organization=$(System.TeamFoundationCollectionUri) project=$(System.TeamProject) --use-git-aliases true
     displayName: 'Set default Azure DevOps organization and project'
     
-  # - bash:
-  #     az devops project create --name 'TestProject2'
-  #   displayName: 'Create a new project'
+  - bash:
+      az devops project create --name 'TestProject1'
+    displayName: 'Create a new project'
 
   - bash:
-      az pipelines variable list
-      echo $AZURE_DEVOPS_EXT_GITHUB_PAT
-      echo "From variable:"
-      echo $github-pat-token
-      az pipelines variable update --name 'AZURE_DEVOPS_EXT_GITHUB_PAT' --value $github-pat-token --secret true
-      echo $AZURE_DEVOPS_EXT_GITHUB_PAT
+      # az pipelines variable list
+      # echo $AZURE_DEVOPS_EXT_GITHUB_PAT
+      # echo "From variable:"
+      # echo $github-pat-token
+      # az pipelines variable update --name 'AZURE_DEVOPS_EXT_GITHUB_PAT' --value $github-pat-token --secret true
+      # echo $AZURE_DEVOPS_EXT_GITHUB_PAT
+      export AZURE_DEVOPS_EXT_GITHUB_PAT= $github-pat-token
       az devops service-endpoint github create --github-url 'https://github.com/ai-factory-azure/iac-arm'--name 'Github-IAC' --org 'https://dev.azure.com/ai-factory-azure' --project 'TestProject1'
     displayName: 'Create Github Service Endpoint'
