--- a/azuredevops/pipelines/azure-devops-iac.yml
+++ b/azuredevops/pipelines/azure-devops-iac.yml
@@ -32,6 +32,6 @@ jobs:
       # echo $github-pat-token
       # az pipelines variable update --name 'AZURE_DEVOPS_EXT_GITHUB_PAT' --value $github-pat-token --secret true
       # echo $AZURE_DEVOPS_EXT_GITHUB_PAT
-      export AZURE_DEVOPS_EXT_GITHUB_PAT= $github-pat-token
+      # export AZURE_DEVOPS_EXT_GITHUB_PAT= $github-pat-token
       az devops service-endpoint github create --github-url 'https://github.com/ai-factory-azure/iac-arm'--name 'Github-IAC' --org 'https://dev.azure.com/ai-factory-azure' --project 'TestProject1'
     displayName: 'Create Github Service Endpoint'
