--- a/azuredevops/pipelines/azure-devops-iac.yml
+++ b/azuredevops/pipelines/azure-devops-iac.yml
@@ -4,7 +4,7 @@ trigger:
 variables:
 - group: bootstrap-variables-kv
 - name: AZURE_DEVOPS_EXT_GITHUB_PAT
-  value: $(github-pat-token)
+  value: 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
 
 jobs:
 - job: Linux
