Update azure-devops-iac.yml for Azure Pipelines

--- a/azuredevops/pipelines/azure-devops-iac.yml
+++ b/azuredevops/pipelines/azure-devops-iac.yml
@@ -42,4 +42,6 @@ jobs:
       # az pipelines variable update --name 'AZURE_DEVOPS_EXT_GITHUB_PAT' --value $github-pat-token --secret true
       # echo $AZURE_DEVOPS_EXT_GITHUB_PAT      
       az devops service-endpoint github create --github-url 'https://github.com/ai-factory-azure/iac-arm' --name 'Github-IAC' --org 'https://dev.azure.com/ai-factory-azure' --project 'TestProject1'
+      az devops service-endpoint update --id $DOCKER_CONNECTION_ID --enable-for-all
+      # az devops service-endpoint update --id --enable-for-all true      
     displayName: 'Create Github Service Endpoint'
