Update azure-devops-iac.yml for Azure Pipelines

--- a/azuredevops/pipelines/azure-devops-iac.yml
+++ b/azuredevops/pipelines/azure-devops-iac.yml
@@ -45,3 +45,8 @@ jobs:
       # az devops service-endpoint update --id $DOCKER_CONNECTION_ID --enable-for-all
       # az devops service-endpoint update --id --enable-for-all true      
     displayName: 'Create Github Service Endpoint'
+
+  - bash:
+      # export AZURE_DEVOPS_EXT_GITHUB_PAT= $(github-pat-token)
+      az devops service-endpoint update --id --enable-for-all true 
+    displayName: 'Update endpoint'
