--- a/azuredevops/pipelines/azure-devops-iac.yml
+++ b/azuredevops/pipelines/azure-devops-iac.yml
@@ -29,13 +29,14 @@ jobs:
     displayName: Set Github PAT variable value
 
   - bash: 
-      az devops service-endpoint github create --github-url 'https://github.com/ai-factory-azure' --name 'Github-AI-Factory' --org 'https://dev.azure.com/ai-factory-azure' --project 'TestProject1'
-      az devops service-endpoint update --id $GITHUB_CONNECTION_ID --enable-for-all
+      az devops service-endpoint github create  --github-url 'https://github.com/ai-factory-azure' 
+                                                --name 'Github-AI-Factory' 
+                                                --org 'https://dev.azure.com/ai-factory-azure' 
+                                                --project 'TestProject1'
+      # az devops service-endpoint update --id $GITHUB_CONNECTION_ID --enable-for-all
       # az devops service-endpoint update --id --enable-for-all true      
     displayName: 'Create Github Service Endpoint'
 
-  - bash:
-      echo $GITHUB_CONNECTION_ID
-      echo $DOCKER_CONNECTION_ID
-    #  az devops service-endpoint update --id $GITHUB_CONNECTION_ID --enable-for-all
-    displayName: 'Update endpoint'
+  # - bash:
+  #     az devops service-endpoint update --id $GITHUB_CONNECTION_ID --enable-for-all
+  #   displayName: 'Update endpoint'
