--- a/azuredevops/pipelines/azure-devops-iac.yml
+++ b/azuredevops/pipelines/azure-devops-iac.yml
@@ -27,8 +27,11 @@ jobs:
 
   - bash: 
       echo '##vso[task.setvariable variable=AZURE_DEVOPS_EXT_GITHUB_PAT]$(github-pat-token)'
-      echo '##vso[task.setvariable variable=AZURE_DEVOPS_EXT_AZURE_RM_SERVICE_PRINCIPAL_KEY]$(azure-rm-dev-sp-key)'
     displayName: Set Github PAT variable value
+
+  - bash: 
+      echo '##vso[task.setvariable variable=AZURE_DEVOPS_EXT_AZURE_RM_SERVICE_PRINCIPAL_KEY]$(azure-rm-dev-sp-key)'
+    displayName: Set Azure Service Principal value
 
   - bash: 
       az devops service-endpoint github create  --github-url 'https://github.com/ai-factory-azure' 
@@ -47,6 +50,7 @@ jobs:
                                           --name 'Azure-ARM-Dev'
                                           --org 'https://dev.azure.com/ai-factory-azure' 
                                           --project 'TestProject1'
+    displayName: 'Create Azure Service Connection'
 
   # - bash:
   #     az devops service-endpoint update --id $GITHUB_CONNECTION_ID --enable-for-all
