--- a/azuredevops/pipelines/azure-devops-iac.yml
+++ b/azuredevops/pipelines/azure-devops-iac.yml
@@ -33,24 +33,24 @@ jobs:
       echo '##vso[task.setvariable variable=AZURE_DEVOPS_EXT_AZURE_RM_SERVICE_PRINCIPAL_KEY]$(azure-rm-dev-sp-key)'
     displayName: Set Azure Service Principal value
 
-  - bash: 
-      az devops service-endpoint github create  --github-url 'https://github.com/ai-factory-azure' 
-                                                --name 'Github-AI-Factory' 
-                                                --org 'https://dev.azure.com/ai-factory-azure' 
-                                                --project 'TestProject1'
-      # az devops service-endpoint update --id $GITHUB_CONNECTION_ID --enable-for-all
-      # az devops service-endpoint update --id --enable-for-all true      
-    displayName: 'Create Github Service Endpoint'
+  # - bash: 
+  #     az devops service-endpoint github create  --github-url 'https://github.com/ai-factory-azure' 
+  #                                               --name 'Github-AI-Factory' 
+  #                                               --org 'https://dev.azure.com/ai-factory-azure' 
+  #                                               --project 'TestProject1'
+  #     # az devops service-endpoint update --id $GITHUB_CONNECTION_ID --enable-for-all
+  #     # az devops service-endpoint update --id --enable-for-all true      
+  #   displayName: 'Create Github Service Endpoint'
 
-  - bash:
-      az devops service-endpoint azurerm create --azure-rm-service-principal-id '9b378764-4f58-4b48-8915-b95d9a364e74'
-                                          --azure-rm-subscription-id 'd661a889-c8b8-41f2-93ab-99b3ed99b6e7'
-                                          --azure-rm-subscription-name 'Microsoft Azure Internal Consumption -MK'
-                                          --azure-rm-tenant-id '72f988bf-86f1-41af-91ab-2d7cd011db47'
-                                          --name 'Azure-ARM-Dev'
-                                          --org 'https://dev.azure.com/ai-factory-azure' 
-                                          --project 'TestProject1'
-    displayName: 'Create Azure Service Connection'
+  # - bash:
+  #     az devops service-endpoint azurerm create --azure-rm-service-principal-id '9b378764-4f58-4b48-8915-b95d9a364e74'
+  #                                         --azure-rm-subscription-id 'd661a889-c8b8-41f2-93ab-99b3ed99b6e7'
+  #                                         --azure-rm-subscription-name 'Microsoft Azure Internal Consumption -MK'
+  #                                         --azure-rm-tenant-id '72f988bf-86f1-41af-91ab-2d7cd011db47'
+  #                                         --name 'Azure-ARM-Dev'
+  #                                         --org 'https://dev.azure.com/ai-factory-azure' 
+  #                                         --project 'TestProject1'
+  #   displayName: 'Create Azure Service Connection'
 
   # - bash:
   #     az devops service-endpoint update --id $GITHUB_CONNECTION_ID --enable-for-all --debug
@@ -63,4 +63,6 @@ jobs:
                           --branch main
                           --yml-path pipelines/iac-create-environment-pipeline-arm.yml
                           --service-connection Github-AI-Factory
+                          --org 'https://dev.azure.com/ai-factory-azure' 
+                          --project 'TestProject1'                          
     displayName: 'Create Pipeline from YAML'
