--- a/azuredevops/pipelines/project-variables.yml
+++ b/azuredevops/pipelines/project-variables.yml
@@ -3,35 +3,35 @@ variables:
 
 # Azure DevOps variables
     # Name for the Azure DevOps project
-  - name: PROJECT_NAME
-    value: TestProject1
+  - name: PROJECT-NAME
+    value: TestProject100
 
 # Azure Variables
     # Name for the Azure Service connection endpoint
-  - name: AZURE_SERVICE_ENDPOINT_NAME
+  - name: AZURE-SERVICE-ENDPOINT-NAME
     value: Azure-ARM-Dev
 
 # Github Variables
     # Org URL for the github org where the github project is / will be hosted
-  - name: GITHUB_ORG_URL
+  - name: GITHUB-ORG-URL
     value: https://github.com/ai-factory-azure
     # Name for the Github Service connection endpoint
-  - name: GITHUB_SERVICE_ENDPOINT_NAME
-    value: Github-AI-Factory 
+  - name: GITHUB-SERVICE-ENDPOINT_NAME
+    value: Github-Service-Endpoint
 
 # Pipeline variables
     # Name for the Infrastructure as Code pipeline
-  - name: IAC_PIPELINE_NAME
+  - name: IAC-PIPELINE-NAME
     value: MNIST-IAC   
     # Description for the IAC pipeline
-  - name: IAC_PIPELINE_DESCRIPTION
+  - name: IAC-PIPELINE-DESCRIPTION
     value: Pipeline for MNIST Project
     # Repository url for the IAC repo
-  - name: IAC_REPOSITORY_URL
+  - name: IAC-REPOSITORY-URL
     value:  https://github.com/ai-factory-azure/iac-arm 
     # IAC Branch for creating the pipeline
-  - name: IAC_BRANCH
+  - name: IAC-BRANCH
     value:  main    
     # Pipeline YML path
-  - name: IAC_YML_PATH
+  - name: IAC-YML-PATH
     value: pipelines/iac-create-environment-pipeline-arm.yml
