--- a/azuredevops/pipelines/azure-devops-iac.yml
+++ b/azuredevops/pipelines/azure-devops-iac.yml
@@ -3,6 +3,7 @@ trigger:
 
 variables:
 - group: bootstrap-variables-kv
+- template: project-variables.yml
 
 jobs:
 - job: Linux
@@ -17,52 +18,57 @@ jobs:
     env:
       AZURE_DEVOPS_CLI_PAT: $(System.AccessToken)
     displayName: 'Login Azure DevOps Extension'
-
-  - bash: az devops configure --defaults organization=$(System.TeamFoundationCollectionUri) project=$(System.TeamProject) --use-git-aliases true
-    displayName: 'Set default Azure DevOps organization and project'
-    
+  
   - bash:
-      az devops project create --name 'TestProject1'
+      az devops project create --name $(PROJECT-NAME)
+    continueOnError: true    
     displayName: 'Create a new project'
 
+  - bash: az devops configure --defaults organization=$(System.TeamFoundationCollectionUri) project=$(PROJECT-NAME) --use-git-aliases true
+    displayName: 'Set default Azure DevOps organization and project'
+
   - bash: 
-      echo '##vso[task.setvariable variable=AZURE_DEVOPS_EXT_GITHUB_PAT]$(github-pat-token)'
+      echo '##vso[task.setvariable variable=AZURE_DEVOPS_EXT_GITHUB_PAT]$(AZURE-DEVOPS-EXT-GITHUB-PAT)'
     displayName: Set Github PAT variable value
 
   - bash: 
-      echo '##vso[task.setvariable variable=AZURE_DEVOPS_EXT_AZURE_RM_SERVICE_PRINCIPAL_KEY]$(azure-rm-dev-sp-key)'
+      echo '##vso[task.setvariable variable=AZURE_DEVOPS_EXT_AZURE_RM_SERVICE_PRINCIPAL_KEY]$(AZURE-RM-SERVICE-PRINCIPAL-KEY-DEV)'
     displayName: Set Azure Service Principal value
 
   - bash: 
-      az devops service-endpoint github create  --github-url 'https://github.com/ai-factory-azure' 
-                                                --name 'Github-AI-Factory' 
-                                                --org 'https://dev.azure.com/ai-factory-azure' 
-                                                --project 'TestProject1'
+      az devops service-endpoint github create  --github-url $(GITHUB-ORG-URL) 
+                                                --name $(GITHUB-SERVICE-ENDPOINT_NAME) 
+                                                --org $(System.TeamFoundationCollectionUri)
+                                                --project $(PROJECT-NAME)
       # az devops service-endpoint update --id $GITHUB_CONNECTION_ID --enable-for-all
       # az devops service-endpoint update --id --enable-for-all true      
     displayName: 'Create Github Service Endpoint'
-
+  
   - bash:
-      az devops service-endpoint azurerm create --azure-rm-service-principal-id '9b378764-4f58-4b48-8915-b95d9a364e74'
-                                          --azure-rm-subscription-id 'd661a889-c8b8-41f2-93ab-99b3ed99b6e7'
-                                          --azure-rm-subscription-name 'Microsoft Azure Internal Consumption -MK'
-                                          --azure-rm-tenant-id '72f988bf-86f1-41af-91ab-2d7cd011db47'
-                                          --name 'Azure-ARM-Dev'
-                                          --org 'https://dev.azure.com/ai-factory-azure' 
-                                          --project 'TestProject1'
-    displayName: 'Create Azure Service Connection'
+      az devops service-endpoint update --id $(az devops service-endpoint list --organization https://dev.azure.com/ai-factory-azure --project 'testproject100' -o table |grep Github-Service-Endpoint|cut -d" " -f1) --enable-for-all --organization https://dev.azure.com/ai-factory-azure --project 'testproject100'
+    displayName: 'Update Service Endpoint'
+
+  # - bash:
+  #     az devops service-endpoint azurerm create --azure-rm-service-principal-id $(AZURE-RM-SERVICE-PRINCIPAL-ID-DEV)
+  #                                         --azure-rm-subscription-id $(AZURE-RM-SUBSCRIPTION-ID-DEV)
+  #                                         --azure-rm-subscription-name 'Microsoft Azure Internal Consumption -MK'
+  #                                         --azure-rm-tenant-id $(AZURE-RM-TENANT-ID)
+  #                                         --name AZURE-SERVICE-ENDPOINT-NAME
+  #                                         --org $(System.TeamFoundationCollectionUri) 
+  #                                         --project $(PROJECT-NAME)
+  #   displayName: 'Create Azure Service Connection'
 
   # - bash:
   #     az devops service-endpoint update --id $GITHUB_CONNECTION_ID --enable-for-all --debug
   #   displayName: 'Update endpoint'
 
-  - bash:
-      az pipelines create --name 'MNIST-IAC' 
-                          --description 'Pipeline for MNIST Project' 
-                          --repository https://github.com/ai-factory-azure/iac-arm 
-                          --branch main
-                          --yml-path pipelines/iac-create-environment-pipeline-arm.yml
-                          --service-connection 6ed8cf6e-5ce5-4c10-8653-0832a2d4b27c
-                          --org 'https://dev.azure.com/ai-factory-azure' 
-                          --project 'TestProject1'                          
-    displayName: 'Create Pipeline from YAML'
+  # - bash:
+  #     az pipelines create --name $(IAC-PIPELINE-NAME)
+  #                         --description 'Pipeline for MNIST Project'
+  #                         --repository $(IAC-REPOSITORY-URL)
+  #                         --branch $(IAC-BRANCH)
+  #                         --yml-path $(IAC-YML-PATH)
+  #                         --service-connection $(az devops service-endpoint list --organization https://dev.azure.com/ai-factory-azure --project 'testproject1' -o table |grep Github-AI-Factory13|cut -d" " -f1)
+  #                         --org $(System.TeamFoundationCollectionUri) 
+  #                         --project $(PROJECT-NAME)                       
+  #   displayName: 'Create Pipeline from YAML'
