--- a/azuredevops/pipelines/azure-devops-iac.yml
+++ b/azuredevops/pipelines/azure-devops-iac.yml
@@ -46,27 +46,27 @@ jobs:
       az devops service-endpoint update --id $(az devops service-endpoint list --organization $(System.TeamFoundationCollectionUri) --project $(PROJECT-NAME) -o table |grep $(GITHUB-SERVICE-ENDPOINT_NAME)|cut -d" " -f1) --enable-for-all --organization $(System.TeamFoundationCollectionUri) --project $(PROJECT-NAME)
     displayName: 'Update Service Endpoint'
 
-  # - bash:
-  #     az devops service-endpoint azurerm create --azure-rm-service-principal-id $(AZURE-RM-SERVICE-PRINCIPAL-ID-DEV)
-  #                                         --azure-rm-subscription-id $(AZURE-RM-SUBSCRIPTION-ID-DEV)
-  #                                         --azure-rm-subscription-name 'Microsoft Azure Internal Consumption -MK'
-  #                                         --azure-rm-tenant-id $(AZURE-RM-TENANT-ID)
-  #                                         --name AZURE-SERVICE-ENDPOINT-NAME
-  #                                         --org $(System.TeamFoundationCollectionUri) 
-  #                                         --project $(PROJECT-NAME)
-  #   displayName: 'Create Azure Service Connection'
+  - bash:
+      az devops service-endpoint azurerm create --azure-rm-service-principal-id $(AZURE-RM-SERVICE-PRINCIPAL-ID-DEV)
+                                          --azure-rm-subscription-id $(AZURE-RM-SUBSCRIPTION-ID-DEV)
+                                          --azure-rm-subscription-name $(AZURE-RM-SUBSCRIPTION-NAME-DEV)
+                                          --azure-rm-tenant-id $(AZURE-RM-TENANT-ID)
+                                          --name $(AZURE-SERVICE-ENDPOINT-NAME)
+                                          --org $(System.TeamFoundationCollectionUri) 
+                                          --project $(PROJECT-NAME)
+    displayName: 'Create Azure Service Connection'
 
-  # - bash:
-  #     az devops service-endpoint update --id $GITHUB_CONNECTION_ID --enable-for-all --debug
-  #   displayName: 'Update endpoint'
+  - bash:
+      az devops service-endpoint update --id $(az devops service-endpoint list --organization $(System.TeamFoundationCollectionUri) --project $(PROJECT-NAME) -o table |grep $(AZURE-SERVICE-ENDPOINT-NAME)|cut -d" " -f1) --enable-for-all --organization $(System.TeamFoundationCollectionUri) --project $(PROJECT-NAME)
+    displayName: 'Update endpoint'
 
-  # - bash:
-  #     az pipelines create --name $(IAC-PIPELINE-NAME)
-  #                         --description 'Pipeline for MNIST Project'
-  #                         --repository $(IAC-REPOSITORY-URL)
-  #                         --branch $(IAC-BRANCH)
-  #                         --yml-path $(IAC-YML-PATH)
-  #                         --service-connection $(az devops service-endpoint list --organization https://dev.azure.com/ai-factory-azure --project 'testproject1' -o table |grep Github-AI-Factory13|cut -d" " -f1)
-  #                         --org $(System.TeamFoundationCollectionUri) 
-  #                         --project $(PROJECT-NAME)                       
-  #   displayName: 'Create Pipeline from YAML'
+  - bash:
+      az pipelines create --name $(IAC-PIPELINE-NAME)
+                          --description 'Pipeline for MNIST Project'
+                          --repository $(IAC-REPOSITORY-URL)
+                          --branch $(IAC-BRANCH)
+                          --yml-path $(IAC-YML-PATH)
+                          --service-connection $(az devops service-endpoint list --organization $(System.TeamFoundationCollectionUri) --project $(PROJECT-NAME) -o table |grep $(AZURE-SERVICE-ENDPOINT-NAME)|cut -d" " -f1)
+                          --org $(System.TeamFoundationCollectionUri) 
+                          --project $(PROJECT-NAME)                       
+    displayName: 'Create Pipeline from YAML'
