Update azure-devops-iac.yml for Azure Pipelines

--- a/azuredevops/pipelines/azure-devops-iac.yml
+++ b/azuredevops/pipelines/azure-devops-iac.yml
@@ -83,7 +83,7 @@ jobs:
     displayName: 'Install gh' 
 
   - bash:
-      gh auth login
+      gh auth login --with-token
     displayName: 'gh login'
 
   - bash:
