--- a/azuredevops/pipelines/azure-devops-iac.yml
+++ b/azuredevops/pipelines/azure-devops-iac.yml
@@ -82,9 +82,9 @@ jobs:
       sudo apt install gh
     displayName: 'Install gh' 
 
-  - bash:
-      gh auth login --with-token
-    displayName: 'gh login'
+  # - bash:
+  #     gh auth login --with-token
+  #   displayName: 'gh login'
 
   - bash:
       gh repo list 'ai-factory-azure'
