Update azure-devops-iac.yml for Azure Pipelines

--- a/azuredevops/pipelines/azure-devops-iac.yml
+++ b/azuredevops/pipelines/azure-devops-iac.yml
@@ -31,9 +31,9 @@ jobs:
   #     echo '##vso[task.setvariable variable=AZURE_DEVOPS_EXT_GITHUB_PAT]$(AZURE-DEVOPS-EXT-GITHUB-PAT)'
   #   displayName: Set Github PAT variable value
   
-  # - bash: 
-  #     echo '##vso[task.setvariable variable=GITHUB_TOKEN]$(AZURE-DEVOPS-EXT-GITHUB-PAT)'
-  #   displayName: Set Github PAT for CLI
+  - bash: 
+      echo '##vso[task.setvariable variable=GITHUB_TOKEN]$(AZURE-DEVOPS-EXT-GITHUB-PAT)'
+    displayName: Set Github PAT for CLI
 
   # - bash: 
   #     echo '##vso[task.setvariable variable=AZURE_DEVOPS_EXT_AZURE_RM_SERVICE_PRINCIPAL_KEY]$(AZURE-RM-SERVICE-PRINCIPAL-KEY-DEV)'
