Update azure-devops-iac.yml for Azure Pipelines

--- a/azuredevops/pipelines/azure-devops-iac.yml
+++ b/azuredevops/pipelines/azure-devops-iac.yml
@@ -87,6 +87,6 @@ jobs:
   #   displayName: 'gh login'
 
   - bash:
-      gh repo create $(PROJECT-NAME) -p https://github.com/ai-factory-azure/batch-basic --private --confirm
+      gh repo create $(PROJECT-NAME) -p ai-factory-azure/batch-basic --private --confirm
     displayName: 'Create git repo from template'
       
