--- a/azuredevops/pipelines/azure-devops-iac.yml
+++ b/azuredevops/pipelines/azure-devops-iac.yml
@@ -87,6 +87,6 @@ jobs:
   #   displayName: 'gh login'
 
   - bash:
-      gh repo create $(PROJECT-NAME) --private --confirm
+      gh repo create $(PROJECT-NAME)12345 --private --confirm
     displayName: 'Create git repo from template'
       
