--- a/azuredevops/pipelines/azure-devops-iac.yml
+++ b/azuredevops/pipelines/azure-devops-iac.yml
@@ -87,6 +87,6 @@ jobs:
   #   displayName: 'gh login'
 
   - bash:
-      gh repo create ai-factory-azure/Project-$(PROJECT-NAME)-Code --private --confirm
+      gh repo create ai-factory-azure/Project-$(PROJECT-NAME)-Code -p https://github.com/ai-factory-azure/batch-basic --private --confirm
     displayName: 'Create git repo from template'
       
