--- a/azuredevops/pipelines/project-variables.yml
+++ b/azuredevops/pipelines/project-variables.yml
@@ -4,7 +4,7 @@ variables:
 # Azure DevOps variables
     # Name for the Azure DevOps project
   - name: PROJECT-NAME
-    value: TestProject101
+    value: MNIST01
 
 # Azure Variables
     # Name for the Azure Service connection endpoint
