--- a/azuredevops/pipelines/azure-devops-iac.yml
+++ b/azuredevops/pipelines/azure-devops-iac.yml
@@ -21,71 +21,77 @@ jobs:
       AZURE_DEVOPS_CLI_PAT: $(System.AccessToken)
     displayName: 'Login Azure DevOps Extension'
   
-  - bash:
-      az devops project create --name $(ADO-PROJECT-NAME) --organization $(System.TeamFoundationCollectionUri)
-    continueOnError: true    
-    displayName: 'Create a new project'
+  # - bash:
+  #     az devops project create --name $(ADO-PROJECT-NAME) --organization $(System.TeamFoundationCollectionUri)
+  #   continueOnError: true    
+  #   displayName: 'Create a new project'
 
-  - bash: az devops configure --defaults organization=$(System.TeamFoundationCollectionUri) project=$(ADO-PROJECT-NAME) --use-git-aliases true
-    displayName: 'Set default Azure DevOps organization and project'
+  # - bash: az devops configure --defaults organization=$(System.TeamFoundationCollectionUri) project=$(ADO-PROJECT-NAME) --use-git-aliases true
+  #   displayName: 'Set default Azure DevOps organization and project'
 
-  - bash: 
-      echo '##vso[task.setvariable variable=AZURE_DEVOPS_EXT_GITHUB_PAT]$(AZURE-DEVOPS-EXT-GITHUB-PAT)'
-    displayName: Set Github PAT variable value
+  # - bash: 
+  #     echo '##vso[task.setvariable variable=AZURE_DEVOPS_EXT_GITHUB_PAT]$(AZURE-DEVOPS-EXT-GITHUB-PAT)'
+  #   displayName: Set Github PAT variable value
   
-  - bash: 
-      echo '##vso[task.setvariable variable=GITHUB_TOKEN]$(AZURE-DEVOPS-EXT-GITHUB-PAT)'
-    displayName: Set Github PAT for CLI
+  # - bash: 
+  #     echo '##vso[task.setvariable variable=GITHUB_TOKEN]$(AZURE-DEVOPS-EXT-GITHUB-PAT)'
+  #   displayName: Set Github PAT for CLI
 
-  - bash: 
-      echo '##vso[task.setvariable variable=AZURE_DEVOPS_EXT_AZURE_RM_SERVICE_PRINCIPAL_KEY]$(AZURE-RM-SERVICE-PRINCIPAL-KEY-DEV)'
-    displayName: Set Azure Service Principal value
+  # - bash: 
+  #     echo '##vso[task.setvariable variable=AZURE_DEVOPS_EXT_AZURE_RM_SERVICE_PRINCIPAL_KEY]$(AZURE-RM-SERVICE-PRINCIPAL-KEY-DEV)'
+  #   displayName: Set Azure Service Principal value
 
-  - bash: 
-      az devops service-endpoint github create  --github-url $(GITHUB-ORG-URL) 
-                                                --name $(GITHUB-SERVICE-ENDPOINT_NAME) 
-                                                --org $(System.TeamFoundationCollectionUri)
-                                                --project $(ADO-PROJECT-NAME)
-    displayName: 'Create Github Service Endpoint'
+  # - bash: 
+  #     az devops service-endpoint github create  --github-url $(GITHUB-ORG-URL) 
+  #                                               --name $(GITHUB-SERVICE-ENDPOINT_NAME) 
+  #                                               --org $(System.TeamFoundationCollectionUri)
+  #                                               --project $(ADO-PROJECT-NAME)
+  #   displayName: 'Create Github Service Endpoint'
   
-  - bash:
-      az devops service-endpoint update --id $(az devops service-endpoint list --organization $(System.TeamFoundationCollectionUri) --project $(ADO-PROJECT-NAME) -o table |grep $(GITHUB-SERVICE-ENDPOINT_NAME)|cut -d" " -f1) --enable-for-all --organization $(System.TeamFoundationCollectionUri) --project $(ADO-PROJECT-NAME)
-    displayName: 'Update Service Endpoint'
+  # - bash:
+  #     az devops service-endpoint update --id $(az devops service-endpoint list --organization $(System.TeamFoundationCollectionUri) --project $(ADO-PROJECT-NAME) -o table |grep $(GITHUB-SERVICE-ENDPOINT_NAME)|cut -d" " -f1) --enable-for-all --organization $(System.TeamFoundationCollectionUri) --project $(ADO-PROJECT-NAME)
+  #   displayName: 'Update Service Endpoint'
 
-  - bash:
-      az devops service-endpoint azurerm create --azure-rm-service-principal-id $(AZURE-RM-SERVICE-PRINCIPAL-ID-DEV)
-                                          --azure-rm-subscription-id $(AZURE-RM-SUBSCRIPTION-ID-DEV)
-                                          --azure-rm-subscription-name $(AZURE-RM-SUBSCRIPTION-NAME-DEV)
-                                          --azure-rm-tenant-id $(AZURE-RM-TENANT-ID)
-                                          --name $(AZURE-SERVICE-ENDPOINT-NAME)
-                                          --org $(System.TeamFoundationCollectionUri) 
-                                          --project $(ADO-PROJECT-NAME)
-    displayName: 'Create Azure Service Connection'
+  # - bash:
+  #     az devops service-endpoint azurerm create --azure-rm-service-principal-id $(AZURE-RM-SERVICE-PRINCIPAL-ID-DEV)
+  #                                         --azure-rm-subscription-id $(AZURE-RM-SUBSCRIPTION-ID-DEV)
+  #                                         --azure-rm-subscription-name $(AZURE-RM-SUBSCRIPTION-NAME-DEV)
+  #                                         --azure-rm-tenant-id $(AZURE-RM-TENANT-ID)
+  #                                         --name $(AZURE-SERVICE-ENDPOINT-NAME)
+  #                                         --org $(System.TeamFoundationCollectionUri) 
+  #                                         --project $(ADO-PROJECT-NAME)
+  #   displayName: 'Create Azure Service Connection'
 
-  - bash:
-      az devops service-endpoint update --id $(az devops service-endpoint list --organization $(System.TeamFoundationCollectionUri) --project $(ADO-PROJECT-NAME) -o table |grep $(AZURE-SERVICE-ENDPOINT-NAME)|cut -d" " -f1) --enable-for-all --organization $(System.TeamFoundationCollectionUri) --project $(ADO-PROJECT-NAME)
-    displayName: 'Update endpoint'
+  # - bash:
+  #     az devops service-endpoint update --id $(az devops service-endpoint list --organization $(System.TeamFoundationCollectionUri) --project $(ADO-PROJECT-NAME) -o table |grep $(AZURE-SERVICE-ENDPOINT-NAME)|cut -d" " -f1) --enable-for-all --organization $(System.TeamFoundationCollectionUri) --project $(ADO-PROJECT-NAME)
+  #   displayName: 'Update endpoint'
+   
+  # - bash:
+  #     curl -fsSL https://cli.github.com/packages/githubcli-archive-keyring.gpg | sudo gpg --dearmor -o /usr/share/keyrings/githubcli-archive-keyring.gpg
+  #     echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" | sudo tee /etc/apt/sources.list.d/github-cli.list > /dev/null
+  #     sudo apt update
+  #     sudo apt install gh
+  #   displayName: 'Install gh' 
 
-  - bash:
-      az pipelines create --name $(IAC-PIPELINE-NAME)
-                          --description 'Pipeline for MNIST Project'
-                          --repository $(IAC-REPOSITORY-URL)
-                          --branch $(IAC-BRANCH)
-                          --yml-path $(IAC-YML-PATH)
-                          --service-connection $(az devops service-endpoint list --organization $(System.TeamFoundationCollectionUri) --project $(ADO-PROJECT-NAME) -o table |grep $(GITHUB-SERVICE-ENDPOINT_NAME)|cut -d" " -f1)
-                          --org $(System.TeamFoundationCollectionUri) 
-                          --project $(ADO-PROJECT-NAME)                       
-    displayName: 'Create Pipeline from YAML'
-    
-  - bash:
-      curl -fsSL https://cli.github.com/packages/githubcli-archive-keyring.gpg | sudo gpg --dearmor -o /usr/share/keyrings/githubcli-archive-keyring.gpg
-      echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" | sudo tee /etc/apt/sources.list.d/github-cli.list > /dev/null
-      sudo apt update
-      sudo apt install gh
-    displayName: 'Install gh' 
+  # - bash:
+  #     gh repo create ai-factory-azure/project-$(PROJECT-NAME)-code -p https://github.com/ai-factory-azure/batch-basic --private --confirm
+  #   continueOnError: true
+  #   displayName: 'Create git repo for ml code from template'
 
-  - bash:
-      gh repo create ai-factory-azure/project-$(PROJECT-NAME)-code -p https://github.com/ai-factory-azure/batch-basic --private --confirm
-    continueOnError: true
-    displayName: 'Create git repo from template'
-      
+  # - bash:
+  #     gh repo create ai-factory-azure/project-$(PROJECT-NAME)-controller -p https://github.com/ai-factory-azure/templates-iac --private --confirm
+  #   continueOnError: true
+  #   displayName: 'Create git repo for ml code from template'
+
+  # - bash:
+  #     az pipelines create --name $(IAC-PIPELINE-NAME)
+  #                         --description 'Pipeline for MNIST Project'
+  #                         --repository $(GITHUB-ORG-URL)/project-$(PROJECT-NAME)-controller
+  #                         --branch $(IAC-BRANCH)
+  #                         --yml-path $(IAC-YML-PATH)
+  #                         --service-connection $(az devops service-endpoint list --organization $(System.TeamFoundationCollectionUri) --project $(ADO-PROJECT-NAME) -o table |grep $(GITHUB-SERVICE-ENDPOINT_NAME)|cut -d" " -f1)
+  #                         --org $(System.TeamFoundationCollectionUri) 
+  #                         --project $(ADO-PROJECT-NAME)   
+  #                         --skip-first-run true                    
+  #   displayName: 'Create Pipeline from YAML'
+
