--- a/azuredevops/pipelines/azure-devops-iac.yml
+++ b/azuredevops/pipelines/azure-devops-iac.yml
@@ -43,7 +43,7 @@ jobs:
 
   - bash: 
       az devops service-endpoint github create  --github-url $(GITHUB-ORG-URL) 
-                                                --name $(GITHUB-SERVICE-ENDPOINT_NAME) 
+                                                --name $(GITHUB-SERVICE-ENDPOINT-NAME) 
                                                 --org $(System.TeamFoundationCollectionUri)
                                                 --project $(ADO-PROJECT-NAME)
     displayName: 'Create Github Service Endpoint'
@@ -74,19 +74,24 @@ jobs:
     displayName: 'Install gh' 
 
   - bash:
-      gh repo create ai-factory-azure/project-$(PROJECT-NAME)-code -p https://github.com/ai-factory-azure/batch-basic --private --confirm
+      gh repo create ai-factory-azure/project-$(PROJECT-NAME)-code -p $(CODE-TEMPLATE) --private --confirm
     continueOnError: true
     displayName: 'Create git repo for ml code from template'
 
   - bash:
-      gh repo create ai-factory-azure/project-$(PROJECT-NAME)-controller -p https://github.com/ai-factory-azure/templates-iac --private --confirm
+      gh repo create ai-factory-azure/project-$(PROJECT-NAME)-controller -p $(CONTROLLER-TEMPLATE) --private --confirm
     continueOnError: true
-    displayName: 'Create git repo for iac from template'
+    displayName: 'Create git repo for the controller from template'
+
+  - bash:
+      gh repo create ai-factory-azure/project-$(PROJECT-NAME)-iac -p $(IAC-TEMPLATE) --private --confirm
+    continueOnError: true
+    displayName: 'Create git repo for IAC from template'
 
   - bash:
       az pipelines create --name $(IAC-PIPELINE-NAME)
                           --description 'Pipeline for MNIST Project'
-                          --repository $(GITHUB-ORG-URL)/project-$(PROJECT-NAME)-controller
+                          --repository $(GITHUB-ORG-URL)/project-$(PROJECT-NAME)-iac
                           --branch $(IAC-BRANCH)
                           --yml-path $(IAC-YML-PATH)
                           --service-connection $(az devops service-endpoint list --organization $(System.TeamFoundationCollectionUri) --project $(ADO-PROJECT-NAME) -o table |grep $(GITHUB-SERVICE-ENDPOINT_NAME)|cut -d" " -f1)
